# mycelium-network

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
cli/mycelium-cli/: Cargo.toml
cli/mycelium-cli/src/: main.rs
crates/entropy/: Cargo.toml
crates/entropy/src/: lib.rs
crates/giggs/: Cargo.toml
crates/giggs/src/: lib.rs
crates/inertia/: Cargo.toml
crates/inertia/src/: lib.rs
crates/isotope/: Cargo.toml
crates/isotope/src/: lib.rs
crates/mycelium-core/: Cargo.toml
crates/mycelium-core/src/: lib.rs
crates/mycelium-distancebridge/: Cargo.toml
crates/mycelium-distancebridge/src/: lib.rs
crates/mycelium-ghostid/: Cargo.toml
crates/mycelium-ghostid/src/: decoherence.rs  lib.rs
crates/mycelium-hyphae/: Cargo.toml
crates/mycelium-hyphae/src/: lib.rs  membrane.rs  relay_mesh.rs  seeds.rs  store_forward.rs  webrtc_ice.rs
crates/mycelium-ipfs/: Cargo.toml
crates/mycelium-ipfs/src/: lib.rs
crates/mycelium-node/: Cargo.toml
crates/mycelium-node/src/: control.rs  lib.rs  organism.rs  protocol.rs  store.rs
crates/mycelium-nostr/: Cargo.toml
crates/mycelium-nostr-transport/: Cargo.toml
crates/mycelium-nostr-transport/src/: addr.rs  connection.rs  framing.rs  lib.rs  transport.rs  ws.rs
crates/mycelium-nostr/src/: candidate_relay.rs  lib.rs  nip94.rs  relay_pool.rs  shard_event.rs
crates/mycelium-nutrients/: Cargo.toml
crates/mycelium-nutrients/src/: lib.rs
crates/mycelium-pheromones/: Cargo.toml
crates/mycelium-pheromones/src/: lib.rs
crates/mycelium-pqc/: Cargo.toml
crates/mycelium-pqc/src/: lib.rs
crates/mycelium-qel/: Cargo.toml
crates/mycelium-qel/src/: lib.rs  topological.rs
crates/mycelium-sporebank/: Cargo.toml
crates/mycelium-sporebank/src/: lib.rs
crates/mycelium-tropical/: Cargo.toml
crates/mycelium-tropical/src/: bellman.rs  godunov.rs  hilbert.rs  landscape.rs  lib.rs  physarum.rs
crates/plasma/: Cargo.toml
crates/plasma/src/: lib.rs
crates/singularity/: Cargo.toml
crates/singularity/src/: lib.rs  proxy.rs
crates/thefield/: Cargo.toml
crates/thefield/src/: lib.rs
crates/vacuum/: Cargo.toml
crates/vacuum/src/: layers.rs  lib.rs  process.rs
deploy/: mycelium-seed.service
docs/: architecture.md  candidate-relay.md  candidatos.md  candidatos.state.json  engenharia-reversa-bloqueio.md  et-cosmic-bridge.md  glossary.md  invariante_membrana.md  live_vs_dtn.md  mapa_cpe_vivo.md  matriz_membranas.md  matriz_transporte_nat.md  nostr-qel.md  nostr-transport.md  ops-seed.md  pitch_voluntario.txt  protocol.md  rizomorphs.md  volunteer-sporocarp.md
scripts/: cpe-probe-session.sh  cpe-sensor.sh  e2e-demo.sh  export-seed.sh  horizon-demo.sh  hybrid-demo.sh  install-seed.sh  isotope-decay-demo.sh  lattice-remote-demo.sh  mycelium-diagnose.sh  nostr-transport-smoke.sh  probe-sporocarp.sh  run-folha.sh  run-public-seed.sh  seedbook-demo.sh  verify-sporocarp.sh  volunteer-pipeline.sh
seeds/: mainnet.example.txt  mainnet.txt
