[package]
name = "mycelium-cli"
description = "CLI do Mycelium Network: daemon, sow, signal, resonate, deploy"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mycelium"
path = "src/main.rs"

[dependencies]
mycelium-core = { workspace = true }
mycelium-node = { workspace = true }
mycelium-hyphae = { workspace = true }
mycelium-pheromones = { workspace = true }
mycelium-nutrients = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = "5"
axum = { workspace = true }
