[package]
name = "mycelium-cli"
description = "CLI do Mycelium Network: daemon, sow, signal, resonate, deploy"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mycelium"
path = "src/main.rs"

[dependencies]
mycelium-core = { workspace = true }
mycelium-node = { workspace = true }
mycelium-hyphae = { workspace = true }
mycelium-pheromones = { workspace = true }
mycelium-nutrients = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = "5"
axum = { workspace = true }
mycelium-sporebank = { workspace = true }
hex = { workspace = true }
blake3 = { workspace = true }

[features]
default = ["nostr"]
webrtc = ["mycelium-node/webrtc", "mycelium-hyphae/webrtc"]
nostr = [
    "dep:mycelium-ghostid",
    "dep:mycelium-qel",
    "dep:mycelium-nostr",
    "dep:mycelium-ipfs",
    "dep:mycelium-distancebridge",
    "mycelium-node/nostr",
]

[dependencies.mycelium-ghostid]
workspace = true
optional = true

[dependencies.mycelium-qel]
workspace = true
optional = true

[dependencies.mycelium-nostr]
workspace = true
optional = true

[dependencies.mycelium-ipfs]
workspace = true
optional = true

[dependencies.mycelium-distancebridge]
workspace = true
optional = true
