[package]
name = "mycelium-ghostid"
description = "GhostID: identidade efémera secp256k1 compatível com Nostr"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
secp256k1 = { version = "0.29", features = ["rand-std", "global-context"] }
sha2 = "0.10"
rand = { workspace = true }
hex = { workspace = true }
zeroize = { version = "1", features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
