[package]
name = "mycelium-hyphae"
description = "Hifas: os links vivos do micélio (libp2p: QUIC, Kademlia, gossipsub, mDNS)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mycelium-core = { workspace = true }
libp2p = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
hickory-resolver = { workspace = true }
