[package]
name = "mycelium-hyphae"
description = "Hifas: os links vivos do micélio (libp2p: QUIC, Kademlia, gossipsub, mDNS)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mycelium-core = { workspace = true }
libp2p = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
hickory-resolver = { workspace = true }
hex = { workspace = true }
blake3 = { workspace = true }
libp2p-webrtc = { version = "0.9.0-alpha.1", optional = true, features = ["tokio"] }
rand = { version = "0.8", optional = true }
mycelium-nostr-transport = { workspace = true, optional = true }
mycelium-nostr = { workspace = true, optional = true }

[features]
default = []
# Experimental: libp2p-webrtc 0.9 (webrtc-direct) sobre SwarmBuilder 0.56.
webrtc = ["dep:libp2p-webrtc", "dep:rand"]
# Transporte libp2p sobre Nostr (CandidateRelay + backchannel).
nostr-transport = ["dep:mycelium-nostr-transport", "dep:mycelium-nostr"]

