[package]
name = "mycelium-ipfs"
description = "Blockstore local Fase 4 (Blake3 ContentId) — sem bitswap WAN"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mycelium-core = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = "3"
