[package]
name = "mycelium-nostr-transport"
description = "Transporte libp2p sobre CandidateRelay/backchannel Nostr (kind 39401/39406)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mycelium-ghostid = { workspace = true }
mycelium-nostr = { workspace = true }
libp2p = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
sha2 = "0.10"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
pin-project = "1"
tokio-util = { version = "0.7", features = ["compat"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
