[package]
name = "mycelium-nostr"
description = "Transporte Nostr: RelayPool wss://, NIP-94, shards QEL 31234, CandidateRelay 39401"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mycelium-ghostid = { workspace = true }
mycelium-qel = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
nip44 = "0.3.0"
secp256k1 = { version = "0.31", features = ["global-context"] }
sha2 = "0.10"
tracing = { workspace = true }
url = "2"
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
