[package]
name = "mycelium-nutrients"
description = "Nutrient Cycling: a economia bioquímica do substrato"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mycelium-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
