[package]
name = "mycelium-sporebank"
description = "Spore Bank: seed/DHT de estado — Plots e spore prints persistidos"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mycelium-core = { workspace = true }
giggs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
