[package]
name = "mycelium-tropical"
description = "Álgebra Max-Plus, Bellman, Physarum e CFL para Mycelium Network"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
