[package]
name = "singularity"
description = "Proxy sem servidor: Event Horizon e roteamento por gravidade"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mycelium-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
reqwest = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
