[package]
name = "thefield"
description = "Plataforma social de código sem plataforma: Signals e quórum por ressonância"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mycelium-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
