[package]
name = "vacuum"
description = "Containers sem daemon, sem registry: Voids sugados via hifas, Chambers vivas"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mycelium-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
libc = "0.2"
